crates/vexor-compiler/tests/golden/error/input/match_duplicate.vx
let xs = [1..5]
let result = match xs {
  // Duplicate x variable
  x : x : tail => x * x
}
export result
